fix contrast issues

--- a/lesson6-styling/03-contrast-audit/blog.css
+++ b/lesson6-styling/03-contrast-audit/blog.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
-  color: #555;
+  color: #222;
 }
 
 h1, .h1,
@@ -16,7 +16,7 @@ h6, .h6 {
   margin-top: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
-  color: #333;
+  color: #225;
 }
 
 
@@ -36,7 +36,7 @@ h6, .h6 {
  */
 
 .blog-masthead {
-  background-color: #428bca;
+  background-color: #527eca;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
@@ -47,17 +47,19 @@ h6, .h6 {
   display: inline-block;
   padding: 10px;
   font-weight: 500;
-  color: #cdddeb;
+  color: #eeeeee;
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
   color: #fff;
+  font-weight: bold;
   text-decoration: none;
 }
 
 /* Active state gets a caret at the bottom */
 .blog-nav .active {
   color: #fff;
+  font-weight: bold;
 }
 .blog-nav .active:after {
   position: absolute;
@@ -146,7 +148,7 @@ h6, .h6 {
 }
 .blog-post-meta {
   margin-bottom: 20px;
-  color: #999;
+  color: #557;
 }
 
 
@@ -156,16 +158,15 @@ h6, .h6 {
 
 .blog-footer {
   padding: 40px 0;
-  color: #999;
   text-align: center;
   background-color: #f9f9f9;
   border-top: 1px solid #e5e5e5;
 }
 .blog-footer p {
-  color: #737373;
+  color: #557;
 }
 .blog-footer a {
-  color: #2a77b5;
+  color: #33e;
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
